# bbstore

./: CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: build-and-test.yml
benches/: cache_misses.rs  latency.rs  throughput.rs
examples/: basic.rs
src/: client.rs  command.rs  errors.rs  lib.rs  main.rs  types.rs
src/backend/: mod.rs  store.rs  store_backend.rs
src/resp/: decode.rs  mod.rs  value.rs
tests/: integration.rs
