[package]
name = "bbstore"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
env_logger = "0.11.10"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.1", features = ["full"] }
toml = "1.1.2"

[profile.bench]
debug = true

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }
rand = { version = "0.8", features = ["small_rng"] }

[[bench]]
name = "latency"
harness = false

[[bench]]
name = "throughput"
harness = false
